# monorepo-python-sample

./: README.md
services/greeting/: pyproject.toml
