[tool.poetry]
authors = ["Limor Lahiani"]
description = "Greeting Service"
name = "greeting"
readme = "README.md"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
flask = "3.0.2"
jsonify = "0.5"
python = "^3.10"
serverless-wsgi = "3.0.3"
#configuration_provider = { file = "../../packages/configuration_provider/dist/configuration_provider-0.1.0.tar.gz" }
configuration = {path = "../../packages/configuration", develop = false}

[tool.poetry.dev-dependencies]
pytest = "7.0.0"
